# vitakeyboard

./: .gitignore  README.md  build_send_all.sh
layout_generation/: README.md  iso_to_hid.py  layout.py  requirements.txt
pbp/: Makefile  imports.S  main.c
prx/: Makefile  hidmouse.c  main.c  usb.h
skprx/: CMakeLists.txt  ascii_to_usb_hid.h  exports.yml  hidkeyboard.c  hidkeyboard.h  hidkeyboard.yml  hidmouse.c  hidmouse.h  hidmouse.yml  log.h  main.c  usb_descriptors.h
skprx/layouts/: de_DE.h  en_US.h  es_ES.h  layout_general.h  layouts.h  pt_BR.h
skprx/uapi/: hidkeyboard_uapi.h
vpk/: CMakeLists.txt  main.c
vpk/pkg/sce_sys/livearea/contents/: template.xml
